# CppProg

./: .gitignore  README.md
Exam - 2020h/: 3.cpp  CMakeLists.txt
Exam - 2020v/: 5.cpp
Exam - 2021v/: 1.cpp  2.cpp  3.cpp  5.cpp  CMakeLists.txt
Exam2020h/: 2.cpp  4.cpp  5.cpp  CMakeLists.txt
Exam2020v/: 1.cpp  3.cpp  4.cpp
Exam2021v/: 4.cpp  5.cpp  CMakeLists.txt
Oving1/: CMakeLists.txt
Oving1 - Basics/: a.cpp  b.cpp
Oving10 - Third party libraries/: CMakeLists.txt
Oving2/: 3.cpp  4.cpp  5.cpp  CMakeLists.txt  Oving2.md
Oving2 - Pointers & refs/: 1.cpp  6.cpp
Oving3/: 1.hpp  2.cpp  3.cpp  3.hpp  CMakeLists.txt
Oving3 - Objects/: 1.cpp  4.cpp  CMakeLists.txt
Oving4/: 2.cpp  CMakeLists.txt
Oving4 - Containers, auto & lambda/: 1.cpp
Oving5 - Life & death, polymorphism/: 1.cpp  CMakeLists.txt
Oving6/: 1  1.cpp  1.hpp  CMakeLists.txt
Oving6 - Function objects & threads/: 1.cpp  2.cpp
Oving7/: 2.cpp  Fraction.hpp  Set.cpp  Set.hpp
Oving7 - Operator overloading/: 1.cpp  CMakeLists.txt  Fraction.cpp
Oving8/: 2.cpp
Oving8 - Templates/: 1.cpp  CMakeLists.txt
Oving9 - STL algorithms/: 1.cpp  CMakeLists.txt
Test1/: CMakeLists.txt  Covering.cpp  Covering.hpp  Material.cpp  Material.hpp  main  main.cpp
